--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -2,162 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "25a1a3b5-b35e-481c-a3e4-04e03974589a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: rasterio in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (1.3.10)\n",
-      "Requirement already satisfied: affine in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (2.4.0)\n",
-      "Requirement already satisfied: attrs in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (23.1.0)\n",
-      "Requirement already satisfied: certifi in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (2024.2.2)\n",
-      "Requirement already satisfied: click>=4.0 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (8.1.7)\n",
-      "Requirement already satisfied: cligj>=0.5 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (0.7.2)\n",
-      "Requirement already satisfied: numpy in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (1.26.4)\n",
-      "Requirement already satisfied: snuggs>=1.4.1 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (1.4.7)\n",
-      "Requirement already satisfied: click-plugins in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (1.1.1)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from rasterio) (68.2.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from click>=4.0->rasterio) (0.4.6)\n",
-      "Requirement already satisfied: pyparsing>=2.1.6 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from snuggs>=1.4.1->rasterio) (3.1.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install rasterio"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
-   "id": "0fe0ef06-2050-4569-ad93-62779dc2e406",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting matplotlib\n",
-      "  Downloading matplotlib-3.8.4-cp311-cp311-win_amd64.whl.metadata (5.9 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Downloading contourpy-1.2.1-cp311-cp311-win_amd64.whl.metadata (5.8 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Downloading fonttools-4.51.0-cp311-cp311-win_amd64.whl.metadata (162 kB)\n",
-      "     ---------------------------------------- 0.0/162.8 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 0.0/162.8 kB ? eta -:--:--\n",
-      "     ----------------------------------- -- 153.6/162.8 kB 4.6 MB/s eta 0:00:01\n",
-      "     -------------------------------------- 162.8/162.8 kB 3.2 MB/s eta 0:00:00\n",
-      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
-      "  Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl.metadata (6.5 kB)\n",
-      "Requirement already satisfied: numpy>=1.21 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from matplotlib) (1.26.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from matplotlib) (23.2)\n",
-      "Collecting pillow>=8 (from matplotlib)\n",
-      "  Downloading pillow-10.3.0-cp311-cp311-win_amd64.whl.metadata (9.4 kB)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from matplotlib) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from matplotlib) (2.8.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
-      "Downloading matplotlib-3.8.4-cp311-cp311-win_amd64.whl (7.7 MB)\n",
-      "   ---------------------------------------- 0.0/7.7 MB ? eta -:--:--\n",
-      "   - -------------------------------------- 0.2/7.7 MB 5.9 MB/s eta 0:00:02\n",
-      "   - -------------------------------------- 0.4/7.7 MB 4.5 MB/s eta 0:00:02\n",
-      "   --- ------------------------------------ 0.6/7.7 MB 4.4 MB/s eta 0:00:02\n",
-      "   ---- ----------------------------------- 0.8/7.7 MB 4.7 MB/s eta 0:00:02\n",
-      "   ----- ---------------------------------- 1.0/7.7 MB 4.4 MB/s eta 0:00:02\n",
-      "   ----- ---------------------------------- 1.1/7.7 MB 4.0 MB/s eta 0:00:02\n",
-      "   ------ --------------------------------- 1.3/7.7 MB 3.8 MB/s eta 0:00:02\n",
-      "   ------- -------------------------------- 1.5/7.7 MB 4.1 MB/s eta 0:00:02\n",
-      "   -------- ------------------------------- 1.7/7.7 MB 4.0 MB/s eta 0:00:02\n",
-      "   ---------- ----------------------------- 1.9/7.7 MB 4.1 MB/s eta 0:00:02\n",
-      "   ---------- ----------------------------- 2.1/7.7 MB 4.2 MB/s eta 0:00:02\n",
-      "   ------------ --------------------------- 2.3/7.7 MB 4.1 MB/s eta 0:00:02\n",
-      "   ------------- -------------------------- 2.5/7.7 MB 4.1 MB/s eta 0:00:02\n",
-      "   -------------- ------------------------- 2.7/7.7 MB 4.3 MB/s eta 0:00:02\n",
-      "   --------------- ------------------------ 2.9/7.7 MB 4.2 MB/s eta 0:00:02\n",
-      "   ---------------- ----------------------- 3.2/7.7 MB 4.2 MB/s eta 0:00:02\n",
-      "   ----------------- ---------------------- 3.3/7.7 MB 4.1 MB/s eta 0:00:02\n",
-      "   ------------------ --------------------- 3.5/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ------------------- -------------------- 3.7/7.7 MB 4.2 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 3.9/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 4.1/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   --------------------- ------------------ 4.2/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 4.3/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 4.5/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------ --------------- 4.8/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------- -------------- 4.9/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 5.1/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 5.2/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ---------------------------- ----------- 5.4/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 5.7/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------------ --------- 5.9/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 6.1/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   -------------------------------- ------- 6.3/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 6.5/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 6.7/7.7 MB 4.0 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 7.0/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 7.2/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   -------------------------------------- - 7.4/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  7.5/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  7.6/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  7.6/7.7 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 7.7/7.7 MB 3.9 MB/s eta 0:00:00\n",
-      "Downloading contourpy-1.2.1-cp311-cp311-win_amd64.whl (188 kB)\n",
-      "   ---------------------------------------- 0.0/188.2 kB ? eta -:--:--\n",
-      "   ---------------------------------------  184.3/188.2 kB 3.7 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 188.2/188.2 kB 3.8 MB/s eta 0:00:00\n",
-      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Downloading fonttools-4.51.0-cp311-cp311-win_amd64.whl (2.2 MB)\n",
-      "   ---------------------------------------- 0.0/2.2 MB ? eta -:--:--\n",
-      "   --- ------------------------------------ 0.2/2.2 MB 6.1 MB/s eta 0:00:01\n",
-      "   ------- -------------------------------- 0.4/2.2 MB 5.1 MB/s eta 0:00:01\n",
-      "   ----------- ---------------------------- 0.6/2.2 MB 5.0 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 0.8/2.2 MB 4.6 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 1.0/2.2 MB 4.4 MB/s eta 0:00:01\n",
-      "   ---------------------- ----------------- 1.2/2.2 MB 4.6 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 1.5/2.2 MB 4.6 MB/s eta 0:00:01\n",
-      "   ----------------------------- ---------- 1.6/2.2 MB 4.5 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 1.9/2.2 MB 4.6 MB/s eta 0:00:01\n",
-      "   ------------------------------------- -- 2.1/2.2 MB 4.4 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.2/2.2 MB 4.4 MB/s eta 0:00:00\n",
-      "Downloading kiwisolver-1.4.5-cp311-cp311-win_amd64.whl (56 kB)\n",
-      "   ---------------------------------------- 0.0/56.1 kB ? eta -:--:--\n",
-      "   ---------------------------------------- 56.1/56.1 kB 1.5 MB/s eta 0:00:00\n",
-      "Downloading pillow-10.3.0-cp311-cp311-win_amd64.whl (2.5 MB)\n",
-      "   ---------------------------------------- 0.0/2.5 MB ? eta -:--:--\n",
-      "   -- ------------------------------------- 0.2/2.5 MB 5.1 MB/s eta 0:00:01\n",
-      "   ----- ---------------------------------- 0.4/2.5 MB 4.7 MB/s eta 0:00:01\n",
-      "   -------- ------------------------------- 0.6/2.5 MB 4.3 MB/s eta 0:00:01\n",
-      "   ------------ --------------------------- 0.8/2.5 MB 4.4 MB/s eta 0:00:01\n",
-      "   -------------- ------------------------- 0.9/2.5 MB 4.5 MB/s eta 0:00:01\n",
-      "   ------------------ --------------------- 1.2/2.5 MB 4.4 MB/s eta 0:00:01\n",
-      "   -------------------- ------------------- 1.3/2.5 MB 4.2 MB/s eta 0:00:01\n",
-      "   ----------------------- ---------------- 1.5/2.5 MB 4.3 MB/s eta 0:00:01\n",
-      "   -------------------------- ------------- 1.7/2.5 MB 4.2 MB/s eta 0:00:01\n",
-      "   --------------------------- ------------ 1.8/2.5 MB 4.2 MB/s eta 0:00:01\n",
-      "   ------------------------------- -------- 2.0/2.5 MB 4.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------- ----- 2.2/2.5 MB 4.2 MB/s eta 0:00:01\n",
-      "   ------------------------------------ --- 2.3/2.5 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  2.5/2.5 MB 4.2 MB/s eta 0:00:01\n",
-      "   ---------------------------------------  2.5/2.5 MB 4.1 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 2.5/2.5 MB 3.9 MB/s eta 0:00:00\n",
-      "Installing collected packages: pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
-      "Successfully installed contourpy-1.2.1 cycler-0.12.1 fonttools-4.51.0 kiwisolver-1.4.5 matplotlib-3.8.4 pillow-10.3.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install matplotlib\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d4ebf4f1-2ffa-48e7-87d6-a5b51c3f4b85",
+   "id": "2b0c9ccc-2cce-46fc-bebe-00fd02b9e225",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +15,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "965b614b-8f68-4a95-bb6a-e1622f89a998",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_image(file_path):\n",
+    "    \"\"\" Load the satellite image from the specified file path. \"\"\"\n",
+    "    with rasterio.open(file_path) as src:\n",
+    "        image = src.read(1)  # reading the first band\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d9c08a18-2200-44b4-88f0-e35738113adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\r_rud\\anaconda3\\envs\\project\\Lib\\site-packages\\rasterio\\__init__.py:317: NotGeoreferencedWarning: Dataset has no geotransform, gcps, or rpcs. The identity matrix will be returned.\n",
+      "  dataset = DatasetReader(path, driver=driver, sharing=sharing, **kwargs)\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
+    "\n",
+    "image = load_image(image_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "96f4cb0a-6ffd-489e-acd6-4d3f8ad4dabc",
+   "id": "2dd8a0bd-fc7d-4511-862c-4391b16d1e45",
    "metadata": {},
    "outputs": [],
    "source": []
