--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -283,7 +283,12 @@
    "id": "4c09466c-bf54-4482-89d4-6e1ec54a7bd4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def detect_land_change(image1_path, image2_path):\n",
+    "    # Load images, copy file path image 1 and image 2\n",
+    "    image1 = cv2.imread(image1_path)\n",
+    "    image2 = cv2.imread(image2_path)"
+   ]
   }
  ],
  "metadata": {
