--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -279,16 +279,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c09466c-bf54-4482-89d4-6e1ec54a7bd4",
+   "execution_count": 39,
+   "id": "4347ff1d-ce16-44c6-becc-ffed219010e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: Pillow in c:\\users\\r_rud\\anaconda3\\envs\\project\\lib\\site-packages (10.3.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install Pillow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "94210490-c946-4124-b860-868d3e9fbf06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def detect_land_change(image1_path, image2_path):\n",
-    "    # Load images, copy file path image 1 and image 2\n",
-    "    image1 = cv2.imread(image1_path)\n",
-    "    image2 = cv2.imread(image2_path)"
+    "# to ensure that our images are the same, we must firstly resize them so that they're equal\n",
+    "from PIL import Image, ImageChops, ImageDraw\n",
+    "\n",
+    "def resize_images(image1, image2):\n",
+    "    # Get the minimum dimensions\n",
+    "    min_width = min(image1.width, image2.width)\n",
+    "    min_height = min(image1.height, image2.height)\n",
+    "\n",
+    "    # Resize both images to the minimum dimensions\n",
+    "    image1_resized = image1.resize((min_width, min_height))\n",
+    "    image2_resized = image2.resize((min_width, min_height))\n",
+    "\n",
+    "    return image1_resized, image2_resized"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0414c1f1-4a70-4ab6-983f-224e9d384415",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
