--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -320,8 +320,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0414c1f1-4a70-4ab6-983f-224e9d384415",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (663091051.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    PIL.ImageChops.blend(image1: Image, image2: Image, alpha: float)\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "PIL.ImageChops.blend(image1: Image, image2: Image, alpha: float)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "75cb4cf8-d956-4171-8ad2-6889798bbfc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'PIL' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m PIL\u001b[38;5;241m.\u001b[39mImage\u001b[38;5;241m.\u001b[39mblend\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'PIL' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "PIL.Image.blend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ba95432-7786-49db-9120-74f4824707a0",
    "metadata": {},
    "outputs": [],
    "source": []
