--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "75b2ff60-5dd7-4a8f-af7c-dccb922f1a5d",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "4347ff1d-ce16-44c6-becc-ffed219010e0",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "94210490-c946-4124-b860-868d3e9fbf06",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7ba95432-7786-49db-9120-74f4824707a0",
    "metadata": {},
    "outputs": [],
@@ -333,8 +333,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "5b855c7b-4f74-4cbf-b1e4-db5fc2a31af8",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pillow' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pillow\u001b[38;5;241m.\u001b[39mImage\u001b[38;5;241m.\u001b[39meval(image, \u001b[38;5;241m*\u001b[39margs)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pillow' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pillow.Image.eval(image, *args)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9739a98e-cc35-4146-9bb8-06f119dd4f14",
+   "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
    "metadata": {},
    "outputs": [],
    "source": []
