--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -320,45 +320,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "7ba95432-7786-49db-9120-74f4824707a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    # use your file path \n",
+    "    # use your own file path \n",
     "    image1_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
     "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5b855c7b-4f74-4cbf-b1e4-db5fc2a31af8",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pillow' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pillow\u001b[38;5;241m.\u001b[39mImage\u001b[38;5;241m.\u001b[39meval(image, \u001b[38;5;241m*\u001b[39margs)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pillow' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 17,
+   "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "pillow.Image.eval(image, *args)"
+    "def highlight_changes(image1, image2):\n",
+    "    # changes both images to grayscale and saves them\n",
+    "    image1_gray = image1.convert(\"L\")\n",
+    "    image2_gray = image2.convert(\"L\")\n",
+    "    img.save('greyscale.png')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
+   "id": "526c29d5-9358-4011-a7c7-812d1778f721",
    "metadata": {},
    "outputs": [],
    "source": []
