image not defined
rejig code so it is defined?

--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "75b2ff60-5dd7-4a8f-af7c-dccb922f1a5d",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "4347ff1d-ce16-44c6-becc-ffed219010e0",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "94210490-c946-4124-b860-868d3e9fbf06",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "7ba95432-7786-49db-9120-74f4824707a0",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
    "metadata": {},
    "outputs": [],
@@ -347,8 +347,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "526c29d5-9358-4011-a7c7-812d1778f721",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'image1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# find the difference\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m diff \u001b[38;5;241m=\u001b[39m ImageChops\u001b[38;5;241m.\u001b[39mdifference(image1, image2)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# show the difference\u001b[39;00m\n\u001b[0;32m      5\u001b[0m diff\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'image1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# find the difference\n",
+    "diff = ImageChops.difference(image1, image2)\n",
+    "\n",
+    "# show the difference\n",
+    "diff.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aff0692c-e73c-400c-9933-61d8c1aa8afc",
    "metadata": {},
    "outputs": [],
    "source": []
