--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -347,25 +347,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "526c29d5-9358-4011-a7c7-812d1778f721",
+   "execution_count": 24,
+   "id": "aff0692c-e73c-400c-9933-61d8c1aa8afc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'image1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# find the difference\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m diff \u001b[38;5;241m=\u001b[39m ImageChops\u001b[38;5;241m.\u001b[39mdifference(image1, image2)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# show the difference\u001b[39;00m\n\u001b[0;32m      5\u001b[0m diff\u001b[38;5;241m.\u001b[39mshow()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'image1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from PIL import Image, ImageChops\n",
+    "\n",
+    "# open images\n",
+    "img1 = Image.open(r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\")\n",
+    "img2 = Image.open(r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\")\n",
+    "\n",
     "# find the difference\n",
-    "diff = ImageChops.difference(image1, image2)\n",
+    "diff = ImageChops.difference(img1, img2)\n",
     "\n",
     "# show the difference\n",
     "diff.show()"
@@ -374,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff0692c-e73c-400c-9933-61d8c1aa8afc",
+   "id": "588e5335-90c2-4f0d-9215-830d121598d2",
    "metadata": {},
    "outputs": [],
    "source": []
