deleted the  difference code
accidentally deleted the code bit that somewhat worked :/  added a red mask though.

--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
    "metadata": {},
    "outputs": [],
@@ -342,33 +342,23 @@
     "    # changes both images to grayscale and saves them\n",
     "    image1_gray = image1.convert(\"L\")\n",
     "    image2_gray = image2.convert(\"L\")\n",
-    "    img.save('greyscale.png')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "aff0692c-e73c-400c-9933-61d8c1aa8afc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from PIL import Image, ImageChops\n",
+    "    img.save('greyscale.png')\n",
+    "     #  derrives the difference between the two images\n",
+    "    diff = ImageChops.difference(image1_gray, image2_gray)\n",
+    "    \n",
+    "    # Create a red mask that will show areas of change\n",
+    "    red_mask = Image.new(\"RGB\", image1.size, (255, 0, 0))\n",
     "\n",
-    "# open images\n",
-    "img1 = Image.open(r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\")\n",
-    "img2 = Image.open(r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\")\n",
+    " # Applies the red mask to the differences\n",
+    "    highlighted_changes = Image.composite(red_mask, image1, diff)\n",
     "\n",
-    "# find the difference\n",
-    "diff = ImageChops.difference(img1, img2)\n",
-    "\n",
-    "# show the difference\n",
-    "diff.show()"
+    "    return highlighted_changes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588e5335-90c2-4f0d-9215-830d121598d2",
+   "id": "8ab75c78-e9e7-468b-9b33-77979fd3efbc",
    "metadata": {},
    "outputs": [],
    "source": []
