doesnt run backwards
file path at the start?

--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -298,7 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
+   "id": "8f119795-623e-4813-9128-30a191d5b8a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    # use your own file path \n",
+    "    image1_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
+    "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "94210490-c946-4124-b860-868d3e9fbf06",
    "metadata": {},
    "outputs": [],
@@ -320,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
    "metadata": {},
    "outputs": [],
@@ -339,20 +352,11 @@
     " # Applies the red mask to the differences\n",
     "    highlighted_changes = Image.composite(red_mask, image1, diff)\n",
     "\n",
-    "    return highlighted_changes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "7ba95432-7786-49db-9120-74f4824707a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    # use your own file path \n",
-    "    image1_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
-    "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\""
+    "    return highlighted_changes\n",
+    "    \n",
+    "    # adds the threshold the difference image to highlight changes, currently set at 50 but can be changed\n",
+    "    threshold = 50\n",
+    "    diff = diff.point(lambda p: 255 if p > threshold else 0)\n"
    ]
   },
   {
