--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -298,19 +298,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "8f119795-623e-4813-9128-30a191d5b8a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def main():\n",
-    "    # use your own file path \n",
-    "    image1_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
-    "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "id": "94210490-c946-4124-b860-868d3e9fbf06",
    "metadata": {},
@@ -333,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
    "metadata": {},
    "outputs": [],
@@ -343,20 +330,42 @@
     "    image1_gray = image1.convert(\"L\")\n",
     "    image2_gray = image2.convert(\"L\")\n",
     "    img.save('greyscale.png')\n",
-    "     #  derrives the difference between the two images\n",
+    "    #  derrives the difference between the two images\n",
     "    diff = ImageChops.difference(image1_gray, image2_gray)\n",
+    "\n",
+    "    # adds the threshold the difference image to highlight changes, currently set at 50 but can be changed\n",
+    "    threshold = 50\n",
+    "    diff = diff.point(lambda p: 255 if p > threshold else 0)\n",
+    "    \n",
+    "    # Highlight changes between the images\n",
+    "    highlighted_image = highlight_changes(image1, image2)\n",
+    "\n",
     "    \n",
     "    # Create a red mask that will show areas of change\n",
     "    red_mask = Image.new(\"RGB\", image1.size, (255, 0, 0))\n",
     "\n",
-    " # Applies the red mask to the differences\n",
+    "    # Applies the red mask to the differences\n",
     "    highlighted_changes = Image.composite(red_mask, image1, diff)\n",
     "\n",
     "    return highlighted_changes\n",
     "    \n",
-    "    # adds the threshold the difference image to highlight changes, currently set at 50 but can be changed\n",
-    "    threshold = 50\n",
-    "    diff = diff.point(lambda p: 255 if p > threshold else 0)\n"
+    " \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8f119795-623e-4813-9128-30a191d5b8a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    # use your own file path \n",
+    "    image1_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
+    "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\"\n"
    ]
   },
   {
