--- a/code/code.ipynb
+++ b/code/code.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "75b2ff60-5dd7-4a8f-af7c-dccb922f1a5d",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "4347ff1d-ce16-44c6-becc-ffed219010e0",
    "metadata": {},
    "outputs": [
@@ -298,80 +298,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "94210490-c946-4124-b860-868d3e9fbf06",
+   "execution_count": 19,
+   "id": "1698250e-dc7c-437e-8faa-bb260aababb2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to ensure that our images are the same, we must firstly resize them so that they're equal\n",
     "from PIL import Image, ImageChops, ImageDraw\n",
     "\n",
     "def resize_images(image1, image2):\n",
-    "    # Get the minimum dimensions\n",
+    "    #  the minimum dimensions\n",
     "    min_width = min(image1.width, image2.width)\n",
     "    min_height = min(image1.height, image2.height)\n",
     "\n",
-    "    # Resize both images to the minimum dimensions\n",
+    "    # resizes both images to the minimum dimensions\n",
     "    image1_resized = image1.resize((min_width, min_height))\n",
     "    image2_resized = image2.resize((min_width, min_height))\n",
     "\n",
-    "    return image1_resized, image2_resized"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "8482dae3-a6fd-4f6c-864f-97e316ea7165",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return image1_resized, image2_resized\n",
+    "\n",
     "def highlight_changes(image1, image2):\n",
-    "    # changes both images to grayscale and saves them\n",
+    "    # convert both of the images to grayscale\n",
     "    image1_gray = image1.convert(\"L\")\n",
     "    image2_gray = image2.convert(\"L\")\n",
-    "    img.save('greyscale.png')\n",
-    "    #  derrives the difference between the two images\n",
+    "\n",
+    "    # derrives the absolute difference between the two images\n",
     "    diff = ImageChops.difference(image1_gray, image2_gray)\n",
     "\n",
-    "    # adds the threshold the difference image to highlight changes, currently set at 50 but can be changed\n",
-    "    threshold = 50\n",
+    "    # Threshold the difference image to highlight changes, the threshold can be changed but between 20 and 30 provides the best results\n",
+    "    threshold = 25\n",
     "    diff = diff.point(lambda p: 255 if p > threshold else 0)\n",
-    "    \n",
-    "    # Highlight changes between the images\n",
-    "    highlighted_image = highlight_changes(image1, image2)\n",
     "\n",
-    "    \n",
-    "    # Create a red mask that will show areas of change\n",
+    "    # Creates a red  mask that highlights change\n",
     "    red_mask = Image.new(\"RGB\", image1.size, (255, 0, 0))\n",
     "\n",
-    "    # Applies the red mask to the differences\n",
+    "    # Applies the red  mask to show the differences\n",
     "    highlighted_changes = Image.composite(red_mask, image1, diff)\n",
     "\n",
     "    return highlighted_changes\n",
-    "    \n",
-    " \n",
     "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "8f119795-623e-4813-9128-30a191d5b8a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def main():\n",
-    "    # use your own file path \n",
+    "    # Insert your own file path, make sure to put r before the quotations so python can read it, equally you can insert \\\\ where the / are instead of the r\n",
     "    image1_path = r\"C:\\Users\\r_rud\\Downloads\\LC08_L1TP_203022_20231015_20231102_02_T1_B5.TIF\"\n",
-    "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\"\n"
+    "    image2_path = r\"C:\\Users\\r_rud\\Downloads\\LT05_L1TP_203022_19890307_20200916_02_T1_B5.TIF\"\n",
+    "\n",
+    "    # Opens image of the change\n",
+    "    image1 = Image.open(image1_path)\n",
+    "    image2 = Image.open(image2_path)\n",
+    "\n",
+    "    # Resize images to have the same dimensions\n",
+    "    image1, image2 = resize_images(image1, image2)\n",
+    "\n",
+    "    # Highlight changes between the images\n",
+    "    highlighted_image = highlight_changes(image1, image2)\n",
+    "\n",
+    "    # Displays the highlighted changes\n",
+    "    highlighted_image.show()\n",
+    "\n",
+    "    # Close images\n",
+    "    image1.close()\n",
+    "    image2.close()\n",
+    "    highlighted_image.close()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ab75c78-e9e7-468b-9b33-77979fd3efbc",
+   "id": "696c13d0-6739-43e2-8b6a-39bfd03e89af",
    "metadata": {},
    "outputs": [],
    "source": []
